experimenting with presentation

--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
 <body>
 <textarea id="source">
 
-# Docker-in-Java-development
 Docker in Java development
+Krystian Nowak
+
+---
+##Agenda:
+* Docker 1
+* Docker 2
+* Docker 3
+---
+Header
+---
+Thank you!
+Krystian Nowak
+Krystian.Nowak@gmail.com
 
 </textarea>
 <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
