--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Krystian Nowak
 Krystian.Nowak@gmail.com
 
 </textarea>
-<script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
+<script src="https://remarkjs.com/downloads/remark-latest.min.js">
 </script>
 <script>
       var slideshow = remark.create();
