experimenting with presentation

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
 <textarea id="source">
 
-Docker in Java development
-Krystian Nowak
+# Docker in Java development
+##K rystian Nowak
 
 ---
 ##Agenda:
@@ -27,11 +27,12 @@ Krystian Nowak
 * Docker 2
 * Docker 3
 ---
-Header
+# Header
+Text
 ---
-Thank you!
-Krystian Nowak
-Krystian.Nowak@gmail.com
+# Thank you!
+## Krystian Nowak
+### Krystian.Nowak@gmail.com
 
 </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js">
