small fixes in presentation

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Title</title>
+    <title>Docker in Java development</title>
     <meta charset="utf-8">
     <style>
         @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -276,7 +276,7 @@ Hello World! Counter value = 1
 * remember about healthcheck URL for Marathon in your app e.g.
 
 ```shell
-C:\devel\jug\docker>curl -i http://docker:8080/admin/healthcheck
+curl -i http://docker:8080/admin/healthcheck
 HTTP/1.1 200 OK
 Date: Wed, 12 Oct 2016 21:43:48 GMT
 Content-Type: application/json
